      - VCF2BFF:
        - Reads 'annotatedWith' from external 'config.yaml' (fixed typo: toolreferences.dbSNSFP -> dbNSFP)
        - Added Sequence Ontology (SO) terms for calculated variant consequences:
          https://www.ensembl.org/info/genome/variation/prediction/predicted_data.html
    - Added spinner for interactive execution of 'bin/beacon'
    - Added basic tests in 't/' directory
    - Internal scripts moved from 'lib/BEACON/bin/' to 'lib/internal/{complete,partial}/'
    - Updated 'bin/config.yaml' with placeholder `{base}`
    - Added $version, $java, and $arch information to 'log.json'
    - Updated tools versions:
      - 'bcftools': 1.15.1 -> 1.21-103
      - 'mongo-database-tools': ubuntu2004-100.5.1 -> ubuntu2204-100.9.4
      - 'ClinVar' from clinvar_20211218* to clinvar_20250312*

2.0.7  2025-02-22
    - Moved 'browser/web' to 'utils/bff_browser/static/assets'
    - Added argument '-projectdir-override' to enable external assignment of id (e.g., Celery)
    - Renamed internal parameter from 'ncpu' to 'threads' and option '-n' to '-t'

2.0.6  2025-01-15
    - Created a Flask app for 'utils/bff_browser' (currently in development)
    - Changed 'bff2html' to output JSON arrays instead of NDJSON for files like 'foo.json' (e.g., 'exome.json')
    - Updated 'docker-compose.yaml' to reflect recent changes
    - Renamed 'bff_api' to 'bff_portal' and added a basic frontend interface for the API

2.0.5  2025-01-07
    - The 'config.yaml' for the 'beacon' script is now pre-formatted for the Dockerized version
    - Renamed 'test/param.in' to 'test/param.yaml'
    - Enforced Browser HTML display using Python3's default HTTP server

2.0.4  2024-12-03
    - Moved 'beacon' script to 'bin/beacon' and updated paths.
    - Reorganized repo in folders

2.0.3  2024-05-24
    - Added Unicode support to 'utils/bff_validator'

2.0.2  2024-02-07
    - Updated 'docker-compose.yml'.